@@ -1,157 +1,41 @@
 plugins {
-    id "org.sonarqube" version "2.6.1"
-    id "io.codearte.nexus-staging" version "0.11.0"
-    id "com.github.spotbugs" version "1.6.9"
-    id "org.xbib.gradle.plugin.asciidoctor" version "1.5.6.0.1"
+    id "de.marcphilipp.nexus-publish" version "0.4.0"
+    id "io.codearte.nexus-staging" version "0.21.1"
 }
 
-printf "Host: %s\nOS: %s %s %s\nJVM: %s %s %s %s\nGradle: %s Groovy: %s Java: %s\n" +
-        "Build: group: ${project.group} name: ${project.name} version: ${project.version}\n",
-        InetAddress.getLocalHost(),
-        System.getProperty("os.name"),
-        System.getProperty("os.arch"),
-        System.getProperty("os.version"),
-        System.getProperty("java.version"),
-        System.getProperty("java.vm.version"),
-        System.getProperty("java.vm.vendor"),
-        System.getProperty("java.vm.name"),
-        gradle.gradleVersion,
-        GroovySystem.getVersion(),
-        JavaVersion.current()
+wrapper {
+    gradleVersion = "${project.property('gradle.wrapper.version')}"
+    distributionType = Wrapper.DistributionType.ALL
+}
 
-if (JavaVersion.current() < JavaVersion.VERSION_11) {
-    throw new GradleException("This build must be run with java 11 or higher")
+ext {
+    user = 'jprante'
+    name = 'elx'
+    description = 'Extensions for Elasticsearch clients (node and transport)'
+    inceptionYear = '2019'
+    url = 'https://github.com/' + user + '/' + name
+    scmUrl = 'https://github.com/' + user + '/' + name
+    scmConnection = 'scm:git:git://github.com/' + user + '/' + name + '.git'
+    scmDeveloperConnection = 'scm:git:ssh://git@github.com:' + user + '/' + name + '.git'
+    issueManagementSystem = 'Github'
+    issueManagementUrl = ext.scmUrl + '/issues'
+    licenseName = 'The Apache License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
 }
 
 subprojects {
-    apply plugin: 'java'
-    apply plugin: 'maven'
-    apply plugin: 'signing'
-    apply plugin: 'com.github.spotbugs'
-    apply plugin: 'pmd'
-    apply plugin: 'checkstyle'
-    apply plugin: 'org.xbib.gradle.plugin.asciidoctor'
-    
-    configurations {
-        asciidoclet
-        wagon
-    }
+    apply plugin: 'java-library'
 
     dependencies {
-        testCompile "junit:junit:${project.property('junit.version')}"
-        testCompile "org.apache.logging.log4j:log4j-core:${project.property('log4j.version')}"
-        testCompile "org.apache.logging.log4j:log4j-slf4j-impl:${project.property('log4j.version')}"
-        wagon "org.apache.maven.wagon:wagon-ssh:${project.property('wagon.version')}"
+        testImplementation "org.apache.logging.log4j:log4j-core:${project.property('log4j.version')}"
+        testImplementation "org.apache.logging.log4j:log4j-jul:${project.property('log4j.version')}"
+        testImplementation "org.apache.logging.log4j:log4j-slf4j-impl:${project.property('log4j.version')}"
     }
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-
-    tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:all"
-        if (!options.compilerArgs.contains("-processor")) {
-            options.compilerArgs << '-proc:none'
-        }
-    }
-
-    test {
-        jvmArgs =[
-               '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
-               '--add-opens=java.base/java.nio=ALL-UNNAMED'
-        ]
-        systemProperty 'jna.debug_load', 'true'
-        testLogging {
-            showStandardStreams = true
-            exceptionFormat = 'full'
-        }
-    }
-    
-    clean {
-        delete "data"
-        delete "logs"
-        delete "out"
-    }
-
-    /*javadoc {
-        options.docletpath = configurations.asciidoclet.files.asType(List)
-        options.doclet = 'org.asciidoctor.Asciidoclet'
-        options.overview = "src/docs/asciidoclet/overview.adoc"
-        options.addStringOption "-base-dir", "${projectDir}"
-        options.addStringOption "-attribute",
-                "name=${project.name},version=${project.version},title-link=https://github.com/xbib/${project.name}"
-        configure(options) {
-            noTimestamp = true
-        }
-    }*/
-
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier 'javadoc'
-    }
-
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        from sourceSets.main.allSource
-        classifier 'sources'
-    }
-
-    artifacts {
-        archives javadocJar, sourcesJar
-    }
-
-    if (project.hasProperty('signing.keyId')) {
-        signing {
-            sign configurations.archives
-        }
-    }
-
-    apply from: "${rootProject.projectDir}/gradle/publish.gradle"
-
-    spotbugs {
-        effort = "max"
-        reportLevel = "low"
-        //includeFilter = file("findbugs-exclude.xml")
-    }
-
-    tasks.withType(com.github.spotbugs.SpotBugsTask) {
-        ignoreFailures = true
-        reports {
-            xml.enabled = false
-            html.enabled = true
-        }
-    }
-
-    tasks.withType(Pmd) {
-        ignoreFailures = true
-        reports {
-            xml.enabled = true
-            html.enabled = true
-        }
-    }
-    tasks.withType(Checkstyle) {
-        ignoreFailures = true
-        reports {
-            xml.enabled = true
-            html.enabled = true
-        }
-    }
-
-    pmd {
-        toolVersion = '6.11.0'
-        ruleSets = ['category/java/bestpractices.xml']
-    }
-    
-    checkstyle {
-        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
-        ignoreFailures = true
-        showViolations = true
-    }
-
-    sonarqube {
-        properties {
-            property "sonar.projectName", "${project.group} ${project.name}"
-            property "sonar.sourceEncoding", "UTF-8"
-            property "sonar.tests", "src/test/java"
-            property "sonar.scm.provider", "git"
-            property "sonar.junit.reportsPath", "build/test-results/test/"
-        }
-    }
+    apply from: rootProject.file('gradle/ide/idea.gradle')
+    apply from: rootProject.file('gradle/compile/java.gradle')
+    apply from: rootProject.file('gradle/test/junit5.gradle')
+    apply from: rootProject.file('gradle/publishing/publication.gradle')
 }
+
+apply from: rootProject.file('gradle/publishing/sonatype.gradle')
